--- a/business-intelligence.html
+++ b/business-intelligence.html
@@ -74,7 +74,7 @@
     <div class="container">
 <!--Begin body here --> 
 <h5><a href='https://jobs.jobvite.com/linkedin/job/obErbfwb'>LinkedIn Careers - Associate Business Intelligence? (BI) ? LinkedIn ? Sales Solutions (LSS)</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">San Francisco, California</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
 <h5><a href='https://jobs.jobvite.com/carfax/job/o30tbfwr'>CARFAX Careers - Business Intelligence Specialist</a></h5> 
@@ -85,7 +85,7 @@
 <p><span class="badge badge-light">Montreal</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/NealAnalytics/743999698493118-business-intelligence-project-manager'>Neal Analytics Business Intelligence Project Manager | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/NealAnalytics/743999698493118-business-intelligence-project-manager'>Neal Analytics Business Intelligence Project Manager | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Redmond, WA, USA</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -129,11 +129,11 @@
 <p><span class="badge badge-light">New York, New York</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/CompuGainSolutions/743999698452272-business-intelligence-data-architect'>CompuGain Solutions Business Intelligence Data Architect | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/CompuGainSolutions/743999698452272-business-intelligence-data-architect'>CompuGain Solutions Business Intelligence Data Architect | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Orlando, FL, USA</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='http://exsilio.applytojob.com/apply/FfmHTcGcCp/Associate-Business-Intelligence-Developer'>Associate Business Intelligence Developer - Exsilio - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://exsilio.applytojob.com/apply/FfmHTcGcCp/Associate-Business-Intelligence-Developer'>Associate Business Intelligence Developer - Exsilio - Career Page</a></h5> 
 <p><span class="badge badge-light">Redmond, WA</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -149,11 +149,11 @@
 <p><span class="badge badge-light">Berlin Berlin, Deutschland</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.greatinsurancejobs.com/job/6409300/business-intelligence-intern-big-/?TrackID=97736'>Business Intelligence Intern (BIG) job with Travelers Insurance | 6409300</a></h5> 
+<h5><a href='https://www.greatinsurancejobs.com/job/6409300/business-intelligence-intern-big-/?TrackID=97736'>Business Intelligence Intern (BIG) job with Travelers Insurance | 6409300</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
-<h5><a href='https://www.sonetjob.com/job/offer?id=bfe6fac003d2e82d&tc=jo-tw'>SonetJob | Offre d'emploi - Ressources Humaines - Business Analyst ? Business Intelligence Analysis Team</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.sonetjob.com/job/offer?id=bfe6fac003d2e82d&tc=jo-tw'>SonetJob | Offre d'emploi - Ressources Humaines - Business Analyst ? Business Intelligence Analysis Team</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
@@ -193,7 +193,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.bsh-ag.de/job/consultant-business-intelligencecontrolling-mw-standort-bayreuth/'>Consultant Business Intelligence/Controlling (m/w) Standort Bayreuth</a></h5> 
+<h5><a href='https://www.bsh-ag.de/job/consultant-business-intelligencecontrolling-mw-standort-bayreuth/'>Consultant Business Intelligence/Controlling (m/w) Standort Bayreuth</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
@@ -201,7 +201,7 @@
 <p><span class="badge badge-light">United States  North America</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/snowflakecomputing/jobs/4494831002'>Job Application for Director of Sales Business Intelligence  at Snowflake</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/snowflakecomputing/jobs/4494831002'>Job Application for Director of Sales Business Intelligence  at Snowflake</a></h5> 
 <p><span class="badge badge-light">San Mateo, California United States</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -237,7 +237,7 @@
 <p><span class="badge badge-light">Tokyo, Japan</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/CorrectCraft/743999698314942-business-intelligence-intern'>Correct Craft Business Intelligence Intern | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/CorrectCraft/743999698314942-business-intelligence-intern'>Correct Craft Business Intelligence Intern | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -302,7 +302,7 @@ Business Intelligence Analyst - SQL&amp; Tableau Job in London ?32-38K</a></h5>
 <p><span class="badge badge-light">Carmel, Indiana</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/ashcompanies/job/oAF2afwb'>American Specialty Health, Inc. Careers - Business Intelligence Analyst, Team Lead</a></h5> 
+<h5><a href='https://jobs.jobvite.com/ashcompanies/job/oAF2afwb'>American Specialty Health, Inc. Careers - Business Intelligence Analyst, Team Lead</a></h5> 
 <p><span class="badge badge-light">San Diego, California</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -319,11 +319,11 @@ Business Intelligence Analyst - SQL&amp; Tableau Job in London ?32-38K</a></h5>
 <p>Oct 16, 2019 ... Provides technical leadership through incorporation of best practices around 
 data modeling, ETL and report development and mentors others on the best?...</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/institute-on-aging/job/o5lpbfwK'>Institute on Aging Careers - Manager, Business Intelligence</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/institute-on-aging/job/o5lpbfwK'>Institute on Aging Careers - Manager, Business Intelligence</a></h5> 
 <p><span class="badge badge-light">San Francisco, California</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/TrueNorthConsultingLLC/743999697988473-business-intelligence-analyst'>True North Consulting, LLC Business Intelligence Analyst | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/TrueNorthConsultingLLC/743999697988473-business-intelligence-analyst'>True North Consulting, LLC Business Intelligence Analyst | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Lenexa, KS</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
@@ -341,7 +341,7 @@ data modeling, ETL and report development and mentors others on the best?...</p>
 governance to the collection and presentation of carbon data. We're looking for 
 an?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://pollenteam.workable.com/j/DDC1E7BBE2'>Business Intelligence Analyst - Pollen (Formally known as Verve)</a></h5> 
+<h5><a href='https://pollenteam.workable.com/j/DDC1E7BBE2'>Business Intelligence Analyst - Pollen (Formally known as Verve)</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Oct 16, 2019 ... As our Business Intelligence Analyst at Pollen, you will be part of the broader 
 agile and geographically-dispersed BI team, focused on facilitating a company?...</p>
@@ -392,7 +392,7 @@ using?...</p>
 <p><span class="badge badge-light">London, United Kingdom  London</span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.crelate.com/portal/teamreddog/job/iqj887pxqwrzbs9gw4ygrhy1br'>Business Intelligence Analyst 3  | Current Opportunities</a></h5> 
+<h5><a href='https://jobs.crelate.com/portal/teamreddog/job/iqj887pxqwrzbs9gw4ygrhy1br'>Business Intelligence Analyst 3  | Current Opportunities</a></h5> 
 <p><span class="badge badge-light">Bellevue, WA  Bellevue, WA</span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
@@ -402,7 +402,7 @@ using?...</p>
 <p><span class="badge badge-light">Luxembourg Luxembourg</span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://hearst.referrals.selectminds.com/jobs/data-and-business-intelligence-analyst-7335'>Data and Business Intelligence Analyst - Hearst Careers</a></h5> 
+<h5><a href='https://hearst.referrals.selectminds.com/jobs/data-and-business-intelligence-analyst-7335'>Data and Business Intelligence Analyst - Hearst Careers</a></h5> 
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
@@ -438,7 +438,7 @@ using?...</p>
 <p><span class="badge badge-light">Irvine, California</span></p>
 <p>Posted on: 2019-10-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://paltron1.join.com/jobs/449595-business-intelligence-analyst-m-w-d'>Job @ PALTRON (Aachen): Business Intelligence Anal... | JOIN</a></h5> 
+<h5><a href='https://paltron1.join.com/jobs/449595-business-intelligence-analyst-m-w-d'>Job @ PALTRON (Aachen): Business Intelligence Anal... | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-23</p>
 <hr/>
@@ -471,7 +471,7 @@ THIS JOB. Already applied? Check the status of your application. Share this job:
 <p><span class="badge badge-light">United States California</span></p>
 <p>Posted on:: 2019-10-22</p>
 <hr/>
-<h5><a href='https://thurrock.referrals.selectminds.com/jobs/strategic-lead-business-intelligence-290'>Strategic Lead - Business Intelligence - Thurrock Council Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://thurrock.referrals.selectminds.com/jobs/strategic-lead-business-intelligence-290'>Strategic Lead - Business Intelligence - Thurrock Council Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-22</p>
 <hr/>
